2022-03-09  Antoine Quint  <graouts@webkit.org>

        [web-animations] dominant-baseline should support discrete animation
        https://bugs.webkit.org/show_bug.cgi?id=237645

        Reviewed by Antti Koivisto.

        * animation/CSSPropertyAnimation.cpp:
        (WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
        * rendering/style/RenderStyle.h:
        (WebCore::RenderStyle::dominantBaseline const):
        (WebCore::RenderStyle::setDominantBaseline):

2022-03-09  Antoine Quint  <graouts@webkit.org>

        [css-lists] css/css-lists/inherit-overwrites.html and css/css-lists/li-counter-increment-computed-style.html are unique failures
        https://bugs.webkit.org/show_bug.cgi?id=237642

        Reviewed by Antti Koivisto.

        A std::nullopt means the property isn't set, not that it shoudl be 0.

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::counterToCSSValue):

2022-03-09  Simon Fraser  <simon.fraser@apple.com>

        Move RemoteLayerBackingStore::Buffer.isVolatile into ImageBufferBackend
        https://bugs.webkit.org/show_bug.cgi?id=237631

        Reviewed by Tim Horton.

        'isVolatile' is a property of a specific image buffer, so it makes more sense to have it in
        ImageBuffer[Backend] than RemoteLayerBackingStore. This also allows GPU Process code to
        maintain volatility state in the web process, which reduces the amount of IPC needed when
        making the front buffer non-volatile before display.

        So ImageBufferBackend gets volatilityState()/setVolatilityState(), accessed via ImageBuffer.
        This state is maintained by RemoteRenderingBackendProxy for remote buffers. We set the state
        to volatile when we receive the IPC reply for markSurfacesVolatile(), which requires
        changing the reply to list buffers for which making volatile was successful.

        RemoteLayerWithRemoteRenderingBackingStoreCollection::makeFrontBufferNonVolatile() can now